# conways-game-of-life-terminal

./: .gitignore  README.md  main.py  pyproject.toml
game_of_life/: cell.py  game.py  grid.py
tests/: test_game.py  test_grid.py
